--- a/ProxChatClientGUICrossPlatform/TextPopup.glade
+++ b/ProxChatClientGUICrossPlatform/TextPopup.glade
@@ -8,9 +8,9 @@
     <property name="resizable">False</property>
     <property name="default-width">500</property>
     <property name="default-height">100</property>
-    <property name="icon">Images\icon.ico</property>
     <property name="type-hint">dialog</property>
     <property name="skip-taskbar-hint">True</property>
+    <property name="decorated">False</property>
     <child internal-child="vbox">
       <object class="GtkBox">
         <property name="can-focus">False</property>
